objects/Scope_Poc_Information__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Pre-requisites</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutoRABIT_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AutoRABIT POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_primary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_provision_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License &amp; Provision Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scope Information</relationshipLabel>
        <relationshipName>ScopeInformation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Out_ofScope__c</fullName>
        <label>Out of Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_to_Contact__c</fullName>
        <label>Person to Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poc_End_Date__c</fullName>
        <label>Poc End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Poc_Scope__c</fullName>
        <label>Poc Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Poc_Start_Date__c</fullName>
        <label>Poc- Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>In Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Version Control -EZ Commits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Orgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selective Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated Deployment</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>sign_off_Criteria__c</fullName>
        <defaultValue>&quot;AutoRABIT has to successfully demonstrate to clients satisfaction what has been outlined in Scope.&quot;</defaultValue>
        <label>Sign-off Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scope - Poc Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Person_to_Contact__c</columns>
        <columns>AutoRABIT_POC__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>